--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <span class="text-dark dark:text-white">Web Developer</span>
             </h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">
-              Waktu terus berjalan, dari pada rebahan mending tiduran!
+              Waktu terus berjalan, manfaat dengan maksimal. Sebelum kamu menyesal!
             </p>
             <a
               href="#"
